2008-06-14  Mark D. Baushke  <mdb@gnu.org>

	* libcvs.mak (CPP_PROJ): Add /I "..\src" to find error.h
	[Patch provided by "Nelson Bolyard" <nelsonb@iname.com>]

2007-12-18  Larry Jones  <lawrence.jones@siemens.com>

	* fseeko.c: Update from GNULIB for EOF bug fix.

2007-08-29  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_DEPENDENCIES): Add @LIBOBJS@.

2007-08-28  Derek Price  <derek@ximbiot.com>

	* system.h: Correct statements about <string.h> and <stdlib.h>.
	[DIRENT_MUST_BE, DIRENT_MIGHT_BE_DIR, DIRENT_MIGHT_BE_SYMLINK]: Adapt
	definitions from glob.c.

2007-08-26  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Import changes from...
	* Makefile.gnulib: ...this autogenerated file.
	* getdelim.c, getline.c, stdio_.h, yesno.c: Update from GNULIB.
	* getdelim.h, getline.h: Remove obsolete files.

2007-08-24  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Import automated changes from...
	* Makefile.gnulib: ...here.
	* dirchownmod.c, lchmod.h, mkancesdirs.c, mkancesdirs.h, mkdir-p.c,
	mkdir-p.h, quote.c, quote.h, raise.c, savewd.c, savewd.h: New files
	from GNULIB.

2007-08-23  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Import automated changes from...
	* Makefile.gnulib: ...here.
	* fseeko.c, ftello.c: Update from GNULIB.
	* lseek.c: New file from GNULIB.

2007-08-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am (xreadlink): Remove module config per...
	* Makefile.gnulib: ...automated changes to this file.

	* .cvsignore: Add new generated files.
	* Makefile.am: Import automated changes from...
	* Makefile.gnulib: ...here.
	* __fpending.h, alloca_.h, asprintf.c, at-func.c, base64.c,
	canon-host.c, canonicalize.c, canonicalize.h, chdir-long.c, chown.c,
	closeout.c, closeout.h, dirname.h, dup-safer.c, dup2.c, error.c,
	exitfail.c, fcntl_.h, filenamecat.c, filenamecat.h, fnmatch.c,
	fnmatch_.h, fnmatch_loop.c, ftruncate.c, gai_strerror.c,
	getaddrinfo.c, getcwd.c, getdate.c, getdate.h, getdate.y, getdelim.c,